2005-10-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b26

 * Change: Changed button for rebuild highlights to "Adminster startpage".

 * New: Added popup "Adminster startpage".

 * New: Added possibility to resort albmorder on startpage.

2005-10-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b25

 * Fix: Some php4.4.0 fixes in Richards Heyes' htmlMimeMail.php

 * Change: Added Alias before receptient adress in ecards -> Jens <mail@example.com>

2005-10-25 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b24

 * Change: Standardified a lot texts.

2005-10-22 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b23

 * Change: Some more little changes in random-block.

 * Fix: added quotes around filename in function downloadFile()

 * Change: Some more space saving in config wizard.

 * Change: Moved function getCheckStatus() into lib/setup.php

 * CHANGE: Use of chmod in platform functions instead of umask as suggested in php docs.

2005-10-20 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b22

 * Change: renamed readCache() and writeCache() in stats.php and block-random.php 
	    to more unique names, to avoid conflicts.

 * Change: Change html output of block-random.php. Uses now <div> with classes instead of <center>.

 * Fix: Do not send headers in initLanguage() if headers were already sent.

 * Change: Display columns in view_photo_properties left/right aligned according to language direction.

2005-10-20 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b21

 * Fix: New Images were not committed in b20.

 * Fix: Use correct gif, instead of non existing png in check.inc and js/toogle.js

2005-10-18 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b20

 * Change: Pimp my configwizard step 1.
	   - New Layout
	   - Changed wording
	   - Combined some test.

 * New: function galleryImage() in lib/content.php

 * Change: Added more detaied description for thumbs ratio.

 * New: Added js/toggle.js

2005-10-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b19

 * Change: removed function removeTags(), which was just a wrapper for strip_tags()
