@@ -191,8 +191,8 @@ if ($gallery->user->canCreateAlbums() && !$gallery->session->offline) {
 if ($gallery->user->isLoggedIn() && !$gallery->session->offline) {
     if ($gallery->user->isAdmin()) {
         
-        $iconText = getIconText('unsortedList.gif', _("Adminster startpage"));
-        $linkurl = makeGalleryUrl('adminster_startpage.php', array('type' => 'popup'));
+        $iconText = getIconText('unsortedList.gif', _("Administer startpage"));
+        $linkurl = makeGalleryUrl('administer_startpage.php', array('type' => 'popup'));
         $iconElements[] = popup_link($iconText, $linkurl, true);
         
         $iconText = getIconText('kdf.gif', _("admin page"));
