@@ -1,3 +1,11 @@
+2005-10-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b27
+
+ * Fix: naming in b26 was wrong
+
+ * Fix: added administer_startpage.php to safe to include list.
+
+   Thanks to dmolavi for catching this bugs.
+
 2005-10-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b26
 
  * Change: Changed button for rebuild highlights to "Adminster startpage".
